# CORTEX

./: CMakeLists.txt  README.md
docs/: ascent-integration-contract.md  canonical-entity-model.md  character-ara-doctrine.md  character-management-ui-contract.md  external-integration-contract.md  imported-catalog-mapping.md  lifecycle-state-machine.md  native-c-avalonia-direction.md  packaging-distribution-model.md  prism-integration-contract.md  runtime-topology.md
include/cortex/: character_runtime.h  imported_catalog_mapper.h  runtime_persistence.h
prototypes/: cortex-control-surface.html
src/: character_runtime.c  imported_catalog_mapper.c  runtime_persistence.c
tests/: test_character_runtime.c  test_imported_catalog_mapper.c  test_runtime_persistence.c
tests/fixtures/: cortex_bad_schema.state  cortex_catalog_input.tsv  cortex_invalid_catalog.tsv
tools/: cortex_host.c
